--- a/Web.config
+++ b/Web.config
@@ -148,9 +148,10 @@
 	</system.codedom>
   <connectionStrings>
     <!-- Conexión Dennis -->
-    <!--<add name="MyDatabase" providerName="System.Data.SqlClient" 
-		 connectionString="Data Source=DENNIS\SQLEXPRESS;PVProyectoFinal=DBName;Integrated Security=True;TrustServerCertificate=True" /> -->
+    <add name="Conn" providerName="System.Data.SqlClient" 
+		 connectionString="Data Source=DENNIS\SQLEXPRESS;Database=PV_ProyectoFinal;Integrated Security=True;TrustServerCertificate=True" />
     <!-- Conexión Stif -->
-    <add name="Conn" providerName="System.Data.SqlClient" connectionString="Data Source=DESKTOP-C7O42T2\SQLEXPRESS;Database=PV_ProyectoFinal;Integrated Security=True;TrustServerCertificate=True" />
+	  <!-- <add name="Conn" providerName="System.Data.SqlClient" 
+	  connectionString="Data Source=DESKTOP-C7O42T2\SQLEXPRESS;Database=PV_ProyectoFinal;Integrated Security=True;TrustServerCertificate=True" />-->
   </connectionStrings>
 </configuration>
