Conexion BD Edwin.

--- a/Web.config
+++ b/Web.config
@@ -171,10 +171,20 @@
 		</compilers>
 	</system.codedom>
   <connectionStrings>
+	  
     <!-- Conexión Dennis -->
-	  <!--  <add name="Conn" providerName="System.Data.SqlClient" 
+	  	  <!--  <add name="Conn" providerName="System.Data.SqlClient" 
 		 connectionString="Data Source=DENNIS\SQLEXPRESS;Database=PV_ProyectoFinal;Integrated Security=True;TrustServerCertificate=True" />-->
+	 
 	  <!-- Conexión Stif -->
-	  <add name="Conn" providerName="System.Data.SqlClient" connectionString="Data Source=DESKTOP-C7O42T2\SQLEXPRESS;Database=PV_ProyectoFinal;Integrated Security=True;TrustServerCertificate=True" />
-  </connectionStrings>
+
+	  <!--<add name="Conn" providerName="System.Data.SqlClient" 
+	  connectionString="Data Source=DESKTOP-C7O42T2\SQLEXPRESS;Database=PV_ProyectoFinal;Integrated Security=True;TrustServerCertificate=True" />-->
+	  
+	  <!-- Conexión Edwin -->
+
+	  <add name="Conn" providerName="System.Data.SqlClient"
+		   connectionString="Data Source=DESKTOP-6PT87KH;Database=PV_ProyectoFinal;Integrated Security=True;TrustServerCertificate=True" />
+	 	    
+	   </connectionStrings>
 </configuration>
