Pagina Nueva reservación,

--- a/Web.config
+++ b/Web.config
@@ -13,7 +13,7 @@
       </namespaces>
       <controls>
         <add assembly="Microsoft.AspNet.Web.Optimization.WebForms" namespace="Microsoft.AspNet.Web.Optimization.WebForms" tagPrefix="webopt" />
-      </controls>
+      <add tagPrefix="ajaxToolkit" assembly="AjaxControlToolkit" namespace="AjaxControlToolkit" /></controls>
     </pages>
   </system.web>
   <runtime>
@@ -183,8 +183,7 @@
 	  
 	  <!-- Conexión Edwin -->
 
-	  <add name="Conn" providerName="System.Data.SqlClient"
-		   connectionString="Data Source=DESKTOP-6PT87KH;Database=PV_ProyectoFinal;Integrated Security=True;TrustServerCertificate=True" />
+	  <add name="Conn" providerName="System.Data.SqlClient" connectionString="Data Source=DESKTOP-6PT87KH;Database=PV_ProyectoFinal;Integrated Security=True;TrustServerCertificate=True" />
 	 	    
 	   </connectionStrings>
 </configuration>
