--- a/Web.config
+++ b/Web.config
@@ -40,7 +40,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.Identity.Client" publicKeyToken="0a613f4dd989e8ae" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.70.2.0" newVersion="4.70.2.0" />
+        <bindingRedirect oldVersion="0.0.0.0-4.71.0.0" newVersion="4.71.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
@@ -108,7 +108,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.Identity.Client.Extensions.Msal" publicKeyToken="0a613f4dd989e8ae" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.70.2.0" newVersion="4.70.2.0" />
+        <bindingRedirect oldVersion="0.0.0.0-4.71.0.0" newVersion="4.71.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Azure.Identity" publicKeyToken="92742159e12e44c8" culture="neutral" />
@@ -172,9 +172,8 @@
 	</system.codedom>
   <connectionStrings>
 	  
-    <!-- Conexión Dennis -->
-	  	  <!--  <add name="Conn" providerName="System.Data.SqlClient" 
-		 connectionString="Data Source=DENNIS\SQLEXPRESS;Database=PV_ProyectoFinal;Integrated Security=True;TrustServerCertificate=True" />-->
+	  	   <add name="Conn" providerName="System.Data.SqlClient" 
+		 connectionString="Data Source=DENNIS\SQLEXPRESS;Database=PV_ProyectoFinal;Integrated Security=True;TrustServerCertificate=True" />
 	 
 	  <!-- Conexión Stif -->
 
@@ -183,7 +182,7 @@
 	  
 	  <!-- Conexión Edwin -->
 
-	  <add name="Conn" providerName="System.Data.SqlClient" connectionString="Data Source=DESKTOP-6PT87KH;Database=PV_ProyectoFinal;Integrated Security=True;TrustServerCertificate=True" />
+	  <!--<add name="Conn" providerName="System.Data.SqlClient" connectionString="Data Source=DESKTOP-6PT87KH;Database=PV_ProyectoFinal;Integrated Security=True;TrustServerCertificate=True" />-->
 	 	    
 	   </connectionStrings>
 </configuration>
